--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^6.9.2"
+    "mongoose": "^6.9.2",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "dotenv": "^16.0.3"
