controller and auth logic

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-DBString = "mongodb://localhost:27017/VibeCircle"
+DBString = "mongodb://127.0.0.1/VibeCircle"
+JWTSECRET = "f88fs8d0a7ddd8hsdva7s-aa"
