fixed typo in package.jsno

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vibecircle",
   "version": "1.0.0",
   "type": "module",
-  "description": "he social media platform designed to bring people together and foster positive connections. Whether you're looking to connect with friends, family, or like-minded individuals, VibeCircle makes it easy to create and join vibrant communities based on your interests, passions, and goals.",
+  "description": "social media platform designed to bring people together and foster positive connections. Whether you're looking to connect with friends, family, or like-minded individuals, VibeCircle makes it easy to create and join vibrant communities based on your interests, passions, and goals.",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
